--- a/Ex01.md
+++ b/Ex01.md
@@ -1,7 +1,7 @@
 # Ex. No : 1	
 # IMPLEMENTATION OF SYMBOL TABLE 
-## Register Number :
-## Date : 
+## Register Number :212223040154
+## Date : 14.09.2024
 
 ## AIM   
 To write a C program to implement a symbol table.
@@ -17,9 +17,84 @@ To write a C program to implement a symbol table.
 8.	Stop the program. 
 
 ## PROGRAM
+```
+#include <stdio.h>
+#include <ctype.h>
+#include <string.h>
+#include <stdlib.h>
+#define MAX_EXPRESSION_SIZE 100
+#define MAX_SYMBOLS 50  // Define a limit for the number of symbols
 
+int main() {
+    int i = 0, j = 0, x = 0, n, flag = 0;
+    char b[MAX_EXPRESSION_SIZE];
+    char d[MAX_SYMBOLS]; // To store the identifiers
+    void *add[MAX_SYMBOLS]; // To store pointers to identifiers
+    char c, srch;
 
+    printf("Enter the Expression terminated by $: ");
+    while ((c = getchar()) != '$' && i < MAX_EXPRESSION_SIZE - 1) {
+        b[i++] = c;
+    }
+    b[i] = '\0'; // Null terminate the string
+    n = i - 1;
+
+    printf("Given Expression: %s\n", b);
+
+    printf("\nSymbol Table\n");
+    printf("Symbol\taddr\ttype\n");
+
+    for (j = 0; j <= n; j++) {
+        c = b[j];
+        if (isalpha((unsigned char)c)) {
+            if (j == n || !isalpha((unsigned char)b[j + 1])) {
+                void *p = malloc(sizeof(char));
+                add[x] = p;
+                d[x] = c;
+                printf("%c\t%p\tidentifier\n", c, p);
+                x++;
+            } else {
+                char ch = b[j + 1];
+                if (ch == '+' || ch == '-' || ch == '*' || ch == '=') {
+                    void *p = malloc(sizeof(char));
+                    add[x] = p;
+                    d[x] = c;
+                    printf("%c\t%p\tidentifier\n", c, p);
+                    x++;
+                }
+            }
+        }
+    }
+
+    printf("\nThe symbol to be searched: ");
+    getchar(); // To consume the newline character left by the previous input
+    srch = getchar();
+    for (i = 0; i < x; i++) {
+        if (srch == d[i]) {
+            printf("Symbol Found\n");
+            printf("%c @ address %p\n", srch, add[i]);
+            flag = 1;
+            break;
+        }
+    }
+
+    if (flag == 0)
+        printf("Symbol Not Found\n");
+
+    // Free dynamically allocated memory
+    for (i = 0; i < x; i++) {
+        free(add[i]);
+    }
+
+    return 0;
+}
+```
 ## OUTPUT 
+
+
+
+![Screenshot 2024-09-14 110512](https://github.com/user-attachments/assets/f5289d41-b868-4013-8cb7-18f8a1a8ed9b)
+
 
 ## RESULT
 The program to implement a symbol table is executed and the output is verified.
