--- a/Ex06.md
+++ b/Ex06.md
@@ -1,7 +1,7 @@
 # Ex. No : 6	
 # IMPLEMENTATION OF THE BACK END OF THE COMPILER 
-## Register Number :
-## Date : 
+## Register Number : 212223040154
+## Date : 26.10.2024
 
 ## AIM   
 To write a program to implement the back end of the compiler.
@@ -15,9 +15,59 @@ To write a program to implement the back end of the compiler.
 6.	Stop the program.
 
 ## PROGRAM
+```
 
+#include <stdio.h>
+#include <ctype.h>
+#include <stdlib.h>
 
+int main() {
+    int i = 2, j = 0, k = 2, k1 = 0;
+    char ip[10], kk[10];
+    FILE *fp;
+
+    printf("Enter the filename of the intermediate code: ");
+    scanf("%s", kk);
+
+    fp = fopen(kk, "r");
+    if (fp == NULL) {
+        printf("\nError in opening the file\n");
+        return 1;
+    }
+
+    printf("\nStatement\tTarget Code\n\n");
+
+    while (fscanf(fp, "%s", ip) != EOF) {
+        printf("%s\tMOV %c,R%d SUB ", ip, ip[i + k], j);
+
+        if (ip[i + 1] == '+')
+            printf("ADD ");
+        else
+            printf("SUB ");
+
+        if (islower(ip[i]))
+            printf("%c,R%d\n", ip[i + k1], j);
+        else
+            printf("%c,%c\n", ip[i], ip[i + 2]);
+
+        j++;
+        k1 = 2;
+        k = 0;
+    }
+
+    fclose(fp);
+    return 0;
+}
+```
 ## OUTPUT 
+k.txt file
+
+![image](https://github.com/user-attachments/assets/41927cfc-0c26-49ca-adbd-b1d1c7d89d2b)
+
+# Program output:
+![image](https://github.com/user-attachments/assets/9897a3d8-18fc-4042-bd15-904782e1d07c)
+
+
 
 ## RESULT
 The back end of the compiler is implemented successfully, and the output is verified.
